--- a/config.yml
+++ b/config.yml
@@ -1,8 +1,9 @@
+name: 'topo_1d'
 setup_dir: 'setup'  # setup directory
 source_dir: 'source_files'  # source file directory
 sample_method: 'halton'  # Valid sample_method values: even, random, halton
-n: 10  # Number of simulations (for use with "random" and "halton" sample_methods)
-params_setup_file: 'params-setup.csv'
+n: 1  # Number of simulations (for use with "random" and "halton" sample_methods)
+params_setup_file: 'params_setup.csv'
 sim_job_file: 'sim_job'
 par_file: 'parameters.par'
 source_params: # Constant source parameters to use for all simulations
@@ -12,8 +13,7 @@ source_params: # Constant source parameters to use for all simulations
   slip1_cm: 100
   slip2_cm: 0
   slip3_cm: 0
-remote_dir: 'supermuc_dir' # For automatically copying files to supermuc
-move_to_supermuc: True  
+move_to_supermuc: True
 
 # Values for determining number of job files
 t_sim: 0.2  # Time (hours) per simulation
@@ -22,11 +22,23 @@ t_max: 48   # Max wall time (hours) of a job on supermuc
 rom_dir_rbf: 'output-rom' # Folder for saving rbf results
 params: ['depth', 'strike', 'dip', 'rake'] # List of parameters to build rom
 
+# Mesh/domain parameters
+mesh:
+  sw_lon: -119.5701
+  sw_lat: 32.8932
+  outer_le: 250.0e+3
+  outer_lz: 200.0e+3
+  outer_dx: 10.0e+3
+  inner_le: 70.0e+3
+  inner_lz: 60.0e+3
+  inner_dx: 1.0e+3
+  thickness: 100.0e+3
+   
 # Area of interest
-xmin: -35e3 
-xmax: 35e3
-ymin: -35e3
-ymax: 35e3
+# xmin: -35e3 
+# xmax: 35e3
+# ymin: -35e3
+# ymax: 35e3
 
 # whether to compute log(IMT) before building rom
 use_log: True
