--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Install dependencies
       run: |
         bash install.sh
-        conda init bash
+        eval "$(conda shell.bash hook)"
         conda activate romshake
     - name: Lint with flake8
       run: |
